5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4173/executions/1595_1015.log
== TEST (2019-03-26 16:49:12) 
-- CODE:
a = int(input("z"))
b = int(input("x"))
c = int(input("c"))
print(a)
print(b)
print(c)

-- OUTPUT:
10
-2
0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 16:49:16) 
-- CODE:
a = int(input("z"))
b = int(input("x"))
c = int(input("c"))
print(a)
print(b)
print(c)

-- EXECUTION TIME:
0.178876
-- TEST CASE 1:
---- input:
10 -2 0
---- correct output:
-2 0 10
---- user output:
10
-2
0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:51:09) 
-- CODE:
a = int(input())
b = int(input())
c = int(input())
d = min(a,b,c)
e = max(a,b,c)
-- OUTPUT:
10
-2
0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:51:24) 
-- CODE:
a = int(input())
b = int(input())
c = int(input())
d = min(a,b,c)
e = max(a,b,c)
print(d)
print(e)
		  
-- OUTPUT:
-2
10
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:52:05) 
-- CODE:
a = int(input("x"))
b = int(input("z"))
c = int(input("c"))
d = min(a,b,c)
e = max(a,b,c)
print(d)
print(e)
		  
-- OUTPUT:
-2
10
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 16:52:06) 
-- CODE:
a = int(input("x"))
b = int(input("z"))
c = int(input("c"))
d = min(a,b,c)
e = max(a,b,c)
print(d)
print(e)
		  
-- EXECUTION TIME:
0.186921
-- TEST CASE 1:
---- input:
10 -2 0
---- correct output:
-2 0 10
---- user output:
-2
10
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:52:07) 
-- CODE:
a = int(input("x"))
b = int(input("z"))
c = int(input("c"))
d = min(a,b,c)
e = max(a,b,c)
print(d)
print(e)
		  
-- OUTPUT:
-2
10
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:52:09) 
-- CODE:
a = int(input("x"))
b = int(input("z"))
c = int(input("c"))
d = min(a,b,c)
e = max(a,b,c)
print(d)
print(e)
		  
-- OUTPUT:
-2
10
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:52:53) 
-- CODE:
a = int(input("x"))
b = int(input("z"))
c = int(input("c"))
d = min(a,b,c)
e = max(a,b,c)
print(d)
print(e)
print(a-b+c)  
-- OUTPUT:
-2
10
12
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 16:52:56) 
-- CODE:
a = int(input("x"))
b = int(input("z"))
c = int(input("c"))
d = min(a,b,c)
e = max(a,b,c)
print(d)
print(e)
print(a-b+c)  
-- EXECUTION TIME:
0.204463
-- TEST CASE 1:
---- input:
10 -2 0
---- correct output:
-2 0 10
---- user output:
-2
10
12
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:52:57) 
-- CODE:
a = int(input("x"))
b = int(input("z"))
c = int(input("c"))
d = min(a,b,c)
e = max(a,b,c)
print(d)
print(e)
print(a-b+c)  
-- OUTPUT:
-2
10
12
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:53:11) 
-- CODE:
a = int(input("x"))
b = int(input("z"))
c = int(input("c"))
d = min(a,b,c)
e = max(a,b,c)
print(d)
print(e)
print(a+b+c-c)  
-- OUTPUT:
-2
10
8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 16:53:11) 
-- CODE:
a = int(input("x"))
b = int(input("z"))
c = int(input("c"))
d = min(a,b,c)
e = max(a,b,c)
print(d)
print(e)
print(a+b+c-c)  
-- EXECUTION TIME:
0.198294
-- TEST CASE 1:
---- input:
10 -2 0
---- correct output:
-2 0 10
---- user output:
-2
10
8
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:53:12) 
-- CODE:
a = int(input("x"))
b = int(input("z"))
c = int(input("c"))
d = min(a,b,c)
e = max(a,b,c)
print(d)
print(e)
print(a+b+c-c)  
-- OUTPUT:
-2
10
8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 16:54:23) 
-- CODE:
a = int(input("x"))
b = int(input("z"))
c = int(input("c"))
d = min(a,b,c)
e = max(a,b,c)
print(d)
print(e)
print((a+b+c)-a-b)  
-- EXECUTION TIME:
0.210297
-- TEST CASE 1:
---- input:
10 -2 0
---- correct output:
-2 0 10
---- user output:
-2
10
0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:54:24) 
-- CODE:
a = int(input("x"))
b = int(input("z"))
c = int(input("c"))
d = min(a,b,c)
e = max(a,b,c)
print(d)
print(e)
print((a+b+c)-a-b)  
-- OUTPUT:
-2
10
0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:54:27) 
-- CODE:
a = int(input("x"))
b = int(input("z"))
c = int(input("c"))
d = min(a,b,c)
e = max(a,b,c)
print(d)
print(e)
print((a+b+c)-a-b)  
-- OUTPUT:
-2
10
0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 16:54:32) 
-- CODE:
a = int(input("x"))
b = int(input("z"))
c = int(input("c"))
d = min(a,b,c)
e = max(a,b,c)
print(d)
print(e)
print((a+b+c)-a-b)  
-- EXECUTION TIME:
0.187251
-- TEST CASE 1:
---- input:
10 -2 0
---- correct output:
-2 0 10
---- user output:
-2
10
0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 16:55:14) 
-- CODE:
a = int(input("x"))
b = int(input("z"))
c = int(input("c"))
d = min(a,b,c)
e = max(a,b,c)
print(d)
print(e)
print((a+b+c)-a-c)  
-- EXECUTION TIME:
0.141745
-- TEST CASE 1:
---- input:
10 -2 0
---- correct output:
-2 0 10
---- user output:
-2
10
-2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:55:14) 
-- CODE:
a = int(input("x"))
b = int(input("z"))
c = int(input("c"))
d = min(a,b,c)
e = max(a,b,c)
print(d)
print(e)
print((a+b+c)-a-c)  
-- OUTPUT:
-2
10
-2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:55:17) 
-- CODE:
a = int(input("x"))
b = int(input("z"))
c = int(input("c"))
d = min(a,b,c)
e = max(a,b,c)
print(d)
print(e)
print((a+b+c)-a-c)  
-- OUTPUT:
-2
10
-2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:55:18) 
-- CODE:
a = int(input("x"))
b = int(input("z"))
c = int(input("c"))
d = min(a,b,c)
e = max(a,b,c)
print(d)
print(e)
print((a+b+c)-a-c)  
-- OUTPUT:
-2
10
-2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 16:55:52) 
-- CODE:
a = int(input("x"))
b = int(input("z"))
c = int(input("c"))
d = min(a,b,c)
e = max(a,b,c)
print(d)
print(e)
print((a+b+c)-d-e)  
-- EXECUTION TIME:
0.235854
-- TEST CASE 1:
---- input:
10 -2 0
---- correct output:
-2 0 10
---- user output:
-2
10
0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:55:55) 
-- CODE:
a = int(input("x"))
b = int(input("z"))
c = int(input("c"))
d = min(a,b,c)
e = max(a,b,c)
print(d)
print(e)
print((a+b+c)-d-e)  
-- OUTPUT:
-2
10
0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:56:09) 
-- CODE:
a = int(input("x"))
b = int(input("z"))
c = int(input("c"))
d = min(a,b,c)
e = max(a,b,c)
print(d)
print(e)
print((a+b+c)-d-e)  
-- OUTPUT:
-2
10
0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 16:56:12) 
-- CODE:
a = int(input("x"))
b = int(input("z"))
c = int(input("c"))
d = min(a,b,c)
e = max(a,b,c)
print(d)
print(e)
print((a+b+c)-d-e)  
-- EXECUTION TIME:
0.166794
-- TEST CASE 1:
---- input:
10 -2 0
---- correct output:
-2 0 10
---- user output:
-2
10
0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 16:57:08) 
-- CODE:
a = int(input("x"))
b = int(input("z"))
c = int(input("c"))
d = min(a,b,c)
e = max(a,b,c)

print((a+b+c)-d-e)

-- EXECUTION TIME:
0.12634
-- TEST CASE 1:
---- input:
10 -2 0
---- correct output:
-2 0 10
---- user output:
0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 16:57:10) 
-- CODE:
a = int(input("x"))
b = int(input("z"))
c = int(input("c"))
d = min(a,b,c)
e = max(a,b,c)

print((a+b+c)-d-e)

-- EXECUTION TIME:
0.206554
-- TEST CASE 1:
---- input:
10 -2 0
---- correct output:
-2 0 10
---- user output:
0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 16:57:48) 
-- CODE:
a = int(input("x"))
b = int(input("z"))
c = int(input("c"))
d = min(a,b,c)
e = max(a,b,c)
f =((a+b+c)-d-e)
print(d,e,f)

-- EXECUTION TIME:
0.149892
-- TEST CASE 1:
---- input:
10 -2 0
---- correct output:
-2 0 10
---- user output:
-2 10 0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:57:52) 
-- CODE:
a = int(input("x"))
b = int(input("z"))
c = int(input("c"))
d = min(a,b,c)
e = max(a,b,c)
f =((a+b+c)-d-e)
print(d,e,f)

-- OUTPUT:
-2 10 0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:57:58) 
-- CODE:
a = int(input("x"))
b = int(input("z"))
c = int(input("c"))
d = min(a,b,c)
e = max(a,b,c)
f =((a+b+c)-d-e)
print(d,e,f)

-- OUTPUT:
-2 10 0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 16:58:25) 
-- CODE:
a = int(input("x"))
b = int(input("z"))
c = int(input("c"))
d = min(a,b,c)
e = max(a,b,c)
f =((a+b+c)-d-e)
print(d)
print(e)
print(f)
print(d,e,f)

-- EXECUTION TIME:
0.229548
-- TEST CASE 1:
---- input:
10 -2 0
---- correct output:
-2 0 10
---- user output:
-2
10
0
-2 10 0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 16:58:46) 
-- CODE:
a = int(input("x"))
b = int(input("z"))
c = int(input("c"))
d = min(a,b,c)
e = max(a,b,c)
f =((a+b+c)-d-e)
print(d)
print(e)
print(f)
print(d e f)

-- EXECUTION TIME:
0.203264
-- ERROR:
  File "/home/codebench/codes/1595/1015/main.py", line 10
    print(d e f)
            ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 16:58:51) 
-- CODE:
a = int(input("x"))
b = int(input("z"))
c = int(input("c"))
d = min(a,b,c)
e = max(a,b,c)
f =((a+b+c)-d-e)
print(d)
print(e)
print(f)
print("d e f")

-- EXECUTION TIME:
0.185857
-- TEST CASE 1:
---- input:
10 -2 0
---- correct output:
-2 0 10
---- user output:
-2
10
0
d e f
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 17:01:06) 
-- CODE:
a = int(input("x"))
b = int(input("z"))
c = int(input("c"))
d = min(a,b,c)
e = max(a,b,c)
f =((a+b+c)-d-e)
print(d)
print(e)
print(f)

-- EXECUTION TIME:
0.193248
-- TEST CASE 1:
---- input:
10 -2 0
---- correct output:
-2 0 10
---- user output:
-2
10
0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 17:01:07) 
-- CODE:
a = int(input("x"))
b = int(input("z"))
c = int(input("c"))
d = min(a,b,c)
e = max(a,b,c)
f =((a+b+c)-d-e)
print(d)
print(e)
print(f)

-- EXECUTION TIME:
0.159466
-- TEST CASE 1:
---- input:
10 -2 0
---- correct output:
-2 0 10
---- user output:
-2
10
0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 17:01:07) 
-- CODE:
a = int(input("x"))
b = int(input("z"))
c = int(input("c"))
d = min(a,b,c)
e = max(a,b,c)
f =((a+b+c)-d-e)
print(d)
print(e)
print(f)

-- OUTPUT:
-2
10
0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 17:01:08) 
-- CODE:
a = int(input("x"))
b = int(input("z"))
c = int(input("c"))
d = min(a,b,c)
e = max(a,b,c)
f =((a+b+c)-d-e)
print(d)
print(e)
print(f)

-- EXECUTION TIME:
0.150167
-- TEST CASE 1:
---- input:
10 -2 0
---- correct output:
-2 0 10
---- user output:
-2
10
0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 17:01:24) 
-- CODE:
a = int(input("x"))
b = int(input("z"))
c = int(input("c"))
d = min(a,b,c)
e = max(a,b,c)
f =((a+b+c)-d-e)
print(e)
print(f)
print(d)

-- EXECUTION TIME:
0.164702
-- TEST CASE 1:
---- input:
10 -2 0
---- correct output:
-2 0 10
---- user output:
10
0
-2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 17:01:25) 
-- CODE:
a = int(input("x"))
b = int(input("z"))
c = int(input("c"))
d = min(a,b,c)
e = max(a,b,c)
f =((a+b+c)-d-e)
print(e)
print(f)
print(d)

-- EXECUTION TIME:
0.152193
-- TEST CASE 1:
---- input:
10 -2 0
---- correct output:
-2 0 10
---- user output:
10
0
-2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 17:01:25) 
-- CODE:
a = int(input("x"))
b = int(input("z"))
c = int(input("c"))
d = min(a,b,c)
e = max(a,b,c)
f =((a+b+c)-d-e)
print(e)
print(f)
print(d)

-- EXECUTION TIME:
0.107338
-- TEST CASE 1:
---- input:
10 -2 0
---- correct output:
-2 0 10
---- user output:
10
0
-2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 17:01:26) 
-- CODE:
a = int(input("x"))
b = int(input("z"))
c = int(input("c"))
d = min(a,b,c)
e = max(a,b,c)
f =((a+b+c)-d-e)
print(e)
print(f)
print(d)

-- EXECUTION TIME:
0.108364
-- TEST CASE 1:
---- input:
10 -2 0
---- correct output:
-2 0 10
---- user output:
10
0
-2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 17:01:26) 
-- CODE:
a = int(input("x"))
b = int(input("z"))
c = int(input("c"))
d = min(a,b,c)
e = max(a,b,c)
f =((a+b+c)-d-e)
print(e)
print(f)
print(d)

-- EXECUTION TIME:
0.107487
-- TEST CASE 1:
---- input:
10 -2 0
---- correct output:
-2 0 10
---- user output:
10
0
-2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 17:01:26) 
-- CODE:
a = int(input("x"))
b = int(input("z"))
c = int(input("c"))
d = min(a,b,c)
e = max(a,b,c)
f =((a+b+c)-d-e)
print(e)
print(f)
print(d)

-- EXECUTION TIME:
0.112062
-- TEST CASE 1:
---- input:
10 -2 0
---- correct output:
-2 0 10
---- user output:
10
0
-2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 17:01:26) 
-- CODE:
a = int(input("x"))
b = int(input("z"))
c = int(input("c"))
d = min(a,b,c)
e = max(a,b,c)
f =((a+b+c)-d-e)
print(e)
print(f)
print(d)

-- EXECUTION TIME:
0.0956559
-- TEST CASE 1:
---- input:
10 -2 0
---- correct output:
-2 0 10
---- user output:
10
0
-2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 17:01:26) 
-- CODE:
a = int(input("x"))
b = int(input("z"))
c = int(input("c"))
d = min(a,b,c)
e = max(a,b,c)
f =((a+b+c)-d-e)
print(e)
print(f)
print(d)

-- EXECUTION TIME:
0.0925109
-- TEST CASE 1:
---- input:
10 -2 0
---- correct output:
-2 0 10
---- user output:
10
0
-2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 17:01:26) 
-- CODE:
a = int(input("x"))
b = int(input("z"))
c = int(input("c"))
d = min(a,b,c)
e = max(a,b,c)
f =((a+b+c)-d-e)
print(e)
print(f)
print(d)

-- EXECUTION TIME:
0.0994408
-- TEST CASE 1:
---- input:
10 -2 0
---- correct output:
-2 0 10
---- user output:
10
0
-2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 17:01:27) 
-- CODE:
a = int(input("x"))
b = int(input("z"))
c = int(input("c"))
d = min(a,b,c)
e = max(a,b,c)
f =((a+b+c)-d-e)
print(e)
print(f)
print(d)

-- EXECUTION TIME:
0.180104
-- TEST CASE 1:
---- input:
10 -2 0
---- correct output:
-2 0 10
---- user output:
10
0
-2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 17:01:27) 
-- CODE:
a = int(input("x"))
b = int(input("z"))
c = int(input("c"))
d = min(a,b,c)
e = max(a,b,c)
f =((a+b+c)-d-e)
print(e)
print(f)
print(d)

-- EXECUTION TIME:
0.106598
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1595/1015/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 17:01:27) 
-- CODE:
a = int(input("x"))
b = int(input("z"))
c = int(input("c"))
d = min(a,b,c)
e = max(a,b,c)
f =((a+b+c)-d-e)
print(e)
print(f)
print(d)

-- EXECUTION TIME:
0.107232
-- TEST CASE 1:
---- input:
10 -2 0
---- correct output:
-2 0 10
---- user output:
10
0
-2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 17:01:27) 
-- CODE:
a = int(input("x"))
b = int(input("z"))
c = int(input("c"))
d = min(a,b,c)
e = max(a,b,c)
f =((a+b+c)-d-e)
print(e)
print(f)
print(d)

-- EXECUTION TIME:
0.115093
-- TEST CASE 1:
---- input:
10 -2 0
---- correct output:
-2 0 10
---- user output:
10
0
-2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 17:01:27) 
-- CODE:
a = int(input("x"))
b = int(input("z"))
c = int(input("c"))
d = min(a,b,c)
e = max(a,b,c)
f =((a+b+c)-d-e)
print(e)
print(f)
print(d)

-- EXECUTION TIME:
0.112252
-- TEST CASE 1:
---- input:
10 -2 0
---- correct output:
-2 0 10
---- user output:
10
0
-2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 17:01:28) 
-- CODE:
a = int(input("x"))
b = int(input("z"))
c = int(input("c"))
d = min(a,b,c)
e = max(a,b,c)
f =((a+b+c)-d-e)
print(e)
print(f)
print(d)

-- EXECUTION TIME:
0.10299
-- TEST CASE 1:
---- input:
10 -2 0
---- correct output:
-2 0 10
---- user output:
10
0
-2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 17:01:28) 
-- CODE:
a = int(input("x"))
b = int(input("z"))
c = int(input("c"))
d = min(a,b,c)
e = max(a,b,c)
f =((a+b+c)-d-e)
print(e)
print(f)
print(d)

-- EXECUTION TIME:
0.129467
-- TEST CASE 1:
---- input:
10 -2 0
---- correct output:
-2 0 10
---- user output:
10
0
-2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 17:01:28) 
-- CODE:
a = int(input("x"))
b = int(input("z"))
c = int(input("c"))
d = min(a,b,c)
e = max(a,b,c)
f =((a+b+c)-d-e)
print(e)
print(f)
print(d)

-- EXECUTION TIME:
0.0970731
-- TEST CASE 1:
---- input:
10 -2 0
---- correct output:
-2 0 10
---- user output:
10
0
-2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 17:01:28) 
-- CODE:
a = int(input("x"))
b = int(input("z"))
c = int(input("c"))
d = min(a,b,c)
e = max(a,b,c)
f =((a+b+c)-d-e)
print(e)
print(f)
print(d)

-- EXECUTION TIME:
0.193138
-- TEST CASE 1:
---- input:
10 -2 0
---- correct output:
-2 0 10
---- user output:
10
0
-2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 17:01:36) 
-- CODE:
a = int(input("x"))
b = int(input("z"))
c = int(input("c"))
d = min(a,b,c)
e = max(a,b,c)
f =((a+b+c)-d-e)
print(d)
print(f)
print(e)

-- EXECUTION TIME:
0.163136
-- TEST CASE 1:
---- input:
10 -2 0
---- correct output:
-2 0 10
---- user output:
-2
0
10
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
